# bluepepper_fork_test

./: .gitattributes  .gitignore  README.md  biome.json  install_dev.ps1  install_enduser.ps1  main.py  pyproject.toml
.github/: copilot-instructions.md
bluepepper/: aqua.py  asset_creator.py  clipboard.py  console.py  core.py  database.py  entities.py  openfile.py  reload.py  shot_creator.py  toast.py
bluepepper/app/: open_app.py  splash_screen.py
bluepepper/app/api/: fastapi_bridge.py  fastapi_client.py  fastapi_server.py
bluepepper/app/main_window/: frameless_window.py  main_window.py  main_window.ui  ui_main_window.py
bluepepper/gui/: utils.py
bluepepper/gui/widgets/: colorwheel.py
bluepepper/helpers/: run_script.py
bluepepper/softwares/: vscode_launcher.py
bluepepper/softwares/blender/: blender_launcher.py  blender_widget.py  startup.py
bluepepper/softwares/maya/: maya_launcher.py
bluepepper/tools/browser/: browser_actions.py  browser_config.py  browser_example.py  browser_main_app_widget.py  browser_tab.py  table_documents.py  table_files.py  table_kinds.py  table_tasks.py
bluepepper/tools/databridge/: databridge.py
bluepepper/tools/demo/: demo_widget.ui  (+2 more)
conf/: app_browser.py  app_launcher.py  aquarium.py  blender.py  catchphrases.json  domain.py  fastapi.py  lucent_config.py  mongodb.py  naming_conventions.py  project.py
conf/maya/: maya.py
conf/requirements/: blender__3_13_9.txt  core__3_11_12.txt  maya__3_11_4.txt
install/: create_shortcut.py  current_tag_url.txt  install.py
src/bluepepper/: __init__.py  install_dev.ps1  main.py
(+74 files in other folders)
